# autopilot-engine

./: .gitignore  CMakeLists.txt  README.md  autopilot-global-setup.sh  build.sh  database_client.cpp  debug-build.sh  env_variables.env  launch.cpp  main_loop.cpp  main_loop.h  propeller_controller.cpp  propeller_controller.h  redis_client.h  requirements-install.sh
conditions/: CMakeLists.txt  base_condition.cpp  base_condition.h  complex_condition.cpp  complex_condition.h  elementary_condition.cpp  elementary_condition.h
controllers/: CMakeLists.txt  base_controller.cpp  base_controller.h  evadav_controller.cpp  evadav_controller.h  kadam_controller.cpp  kadam_controller.h  mgid_controller.cpp  mgid_controller.h  propeller_controller.cpp  propeller_controller.h
data_services/: CMakeLists.txt  data_services.h  database_client.cpp  database_client.h  redis_client.cpp  redis_client.h
helpers/: CMakeLists.txt  binom_client.cpp  binom_client.h  conditions_parser.cpp  conditions_parser.h  config_reader.cpp  config_reader.h  helpers.h  http.cpp  http.h  time_.cpp  time_.h  tracker_client.cpp  tracker_client.h  utils.cpp  utils.h  uuid.h
helpers/conditions/: base_condition.cpp  base_condition.h  complex_condition.cpp  complex_condition.h  conditions.h  elementary_condition.cpp  elementary_condition.h
helpers/expressions/: CMakeLists.txt  binary_operation.cpp  binary_operation.h  complex_condition.cpp  complex_condition.h  elementary_condition.cpp  elementary_condition.h  expression.cpp  expression.h
tests/conditions/: CMakeLists.txt  runner.cpp
tests/conditions/cases/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  test_template.txt
tracker_controllers/: CMakeLists.txt  binom_client.cpp  binom_client.h  consts.h  keitaro_client.cpp  keitaro_client.h  tracker_controllers.h
ts_controllers/: CMakeLists.txt  base_controller.cpp  base_controller.h  evadav_controller.cpp  evadav_controller.h  kadam_controller.cpp  kadam_controller.h  mgid_controller.cpp  mgid_controller.h  propeller_controller.cpp  propeller_controller.h  ts_controllers.h  vimmy_controller.cpp  vimmy_controller.h
utils/: CMakeLists.txt  conditions_parser.cpp  conditions_parser.h  http.cpp  http.h  time_.cpp  time_.h  utils.cpp  utils.h  uuid.cpp  uuid.h
